--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-spring": "^8.0.27",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
